--- a/Create_Manual.yml
+++ b/Create_Manual.yml
@@ -1,4 +1,4 @@
-name: Template_Name
+name: Create_Manual
 
 permissions:
   contents: write
@@ -7,7 +7,7 @@ permissions:
 on: 
   workflow_dispatch:
   schedule:
-    - cron: '35 16 * * *'
+    - cron: '40 16 * * *'
 
 jobs:
   template_name:
@@ -15,7 +15,4 @@ jobs:
     steps:
       - name: create-manual
         uses: gendloop/create-manual@main
-        with: 
-          token: ${{ secrets.GENDLOOP_ACCESS_TOKEN }}
-
       
