--- a/action.yml
+++ b/action.yml
@@ -1,68 +1,30 @@
-name: action-name
+name: create-manual
 author: gendloop
-description: 'action description'
+description: 'create manual for folder'
 inputs:
 # Required
-  version:
-    description: 'New version. e.g. v0.0.0'
-    required: true
-    default: 'v0.0.0'
-  token:
-    description: 'Personal token'
-    required: true
-    default: ${{ github.token }}
-# Optional
-  branch:
-    description: 'branch'
+  folder:
+    description: 'Folder to use'
     required: false
-    default: main
+    default: 'tests'
+  destination:
+    description: 'Destination to output'
+    required: false
+    default: 'docs'
 
 runs:
   using: 'composite'
-  steps:
-    - name: checkout-repo
-      uses: actions/checkout@v3
-      with: 
-        token: ${{ inputs.token }}
-        fetch-depth: 0
-
-    - name: setup-node
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16.x
-      
-    - name: add-release-log
-      shell: bash
-      run: npx changelogithub
-      env:
-        GITHUB_TOKEN: ${{ inputs.token }}
-
-    - name: cmd
-      shell: bash
+  steps: 
+    - name: create-manual
+      shell: pwsh
       working-directory: ${{ github.workspace }}
-      env:
-          GITHUB_TOKEN: ${{ inputs.token }}
       run: |
-        git config --global user.name "$GITHUB_ACTOR"
-        git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-        git checkout ${{ inputs.branch }}
-        git pull
-        repo_name=${GITHUB_REPOSITORY#*/}
-        version=${{ inputs.version }}
-        echo $repo_name
-        echo $version
-        if [[ ${version} =~ ^v(.*)\.(.*)\.(.*) ]] 
-        then
-          major=${BASH_REMATCH[1]}
-          minor=${BASH_REMATCH[2]}
-          patch=${BASH_REMATCH[3]}
-        fi
-        echo $major $minor $patch
-        echo "" > config.txt
-        echo "PROJECT_NAME=${repo_name}" >> config.txt
-        echo "${repo_name}_VERSION_MAJOR=${major}" >> config.txt
-        echo "${repo_name}_VERSION_MINOR=${minor}" >> config.txt
-        echo "${repo_name}_VERSION_PATCH=${patch}" >> config.txt
-        git add .
-        (git commit -m "chore: release VERSION ${{ inputs.version }} ") || true
-        (git push) || true
+        ${{ github.action_path }}\tools\ManualCreate_exe.exe ${{ inputs.folder }} _temp
+        Copy-Item _temp\* ${{ inputs.destination }} -Force
+        Remove-Item _temp\* -Recurse
+
+    - name: git-push
+      uses: gendloop/git-push@v1.0.0
+      with:
+        token: ${{ github.token }}
+        commit: "chore: create manual for \\`${{ inputs.folder }}\\` and export to \\`${{ inputs.destination }}\\` "
