--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ runs:
       shell: pwsh
       working-directory: ${{ github.workspace }}
       run: |
-        ${{ github.action_path }}/tools/ManualCreate_exe.exe ${{ inputs.folder }} _temp
+        ${{ github.action_path }}\tools\ManualCreate_exe.exe ${{ inputs.folder }} _temp
         Copy-Item _temp\* ${{ inputs.destination }} -Force
         Remove-Item _temp\* -Recurse
 
