--- a/action.yml
+++ b/action.yml
@@ -20,8 +20,9 @@ runs:
       working-directory: ${{ github.workspace }}
       run: |
         ${{ github.action_path }}\tools\ManualCreate_exe.exe ${{ inputs.folder }} _temp
-        Copy-Item _temp\* ${{ inputs.destination }} -Force
+        Copy-Item _temp\* ${{ inputs.destination }} -Recurse -Force
         Remove-Item _temp\* -Recurse
+        Rename-Item docs\tests.md docs\Manual.md
 
     - name: git-push
       uses: gendloop/git-push@v1.0.0
