--- a/action.yml
+++ b/action.yml
@@ -22,7 +22,7 @@ runs:
         ${{ github.action_path }}\tools\ManualCreate_exe.exe ${{ inputs.folder }} _temp
         Copy-Item _temp\* ${{ inputs.destination }} -Recurse -Force
         Remove-Item _temp\* -Recurse
-        Rename-Item docs\tests.md docs\Manual.md
+        Rename-Item docs\tests.md Manual.md
 
     - name: git-push
       uses: gendloop/git-push@v1.0.0
