--- a/Create_Manual.yml
+++ b/Create_Manual.yml
@@ -17,5 +17,5 @@ jobs:
         uses: actions/checkout@v3
 
       - name: create-manual
-        uses: gendloop/create-manual@main
+        uses: gendloop/create-manual@v1.0.0
       
