--- a/Create_Manual.yml
+++ b/Create_Manual.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: checkout-repo
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: create-manual
         uses: gendloop/create-manual@v1.0.0
